# modal-serverless-gpu-training

./: .editorconfig  .gitignore  CITATION.cff  GETTING_STARTED.md  LICENSE  MODAL_GUIDE.md  PROJECT_STATUS.md  QUICKREF.md  README.md  SECURITY.md  TROUBLESHOOTING.md  modal_app.py  pyproject.toml  requirements.txt  train_local.py
.claude/: active-plan
configs/: gpt_124m.yaml  gpt_350m.yaml
scripts/: download_data.py
src/: __init__.py
src/model/: __init__.py  gpt.py
src/training/: __init__.py  config.py  trainer.py
