[project]
name = "slm-from-scratch"
version = "0.1.0"
description = "Building a Small Language Model from scratch with Modal + W&B"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "tiktoken>=0.5.0",
    "datasets>=2.14.0",
    "wandb>=0.16.0",
    "modal>=0.63.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "pytest>=7.4.0",
    "ipykernel>=6.25.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "pytest>=7.4.0",
]
